--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,7 +6,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 125px;
-  background-color:rgb(232, 232, 232);
+  background-color: #e0e0e0;
+  background-image: url("https://www.transparenttextures.com/patterns/arabesque.png");
 }
 
 #profile-picture {
