--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -9,12 +9,17 @@
   flex-direction: row;
   justify-content: space-between;
   font-family: 'Bungee', cursive;
+  margin-top: 15px;
 }
 
 #tweet-text {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.new-tweet {
+  width: 90%;
 }
 
 
@@ -24,4 +29,5 @@ textarea {
   background-color: #f4f1ec;
   border-bottom: 3px solid #656565;
   width: 100%;
+  height: 40px;
 }
