--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -18,6 +18,28 @@
   justify-content: space-around;
 }
 
+
+#error1 {
+  display: flex;
+  content: attr('#error1');
+  font-size: 0.85em;
+  color: #c92432;
+  display: block;
+  margin: 10px 0;
+  border: 3px red solid;
+}
+
+
+#error2 {
+  display: flex;
+  content: attr('#error2');
+  font-size: 0.85em;
+  color: #c92432;
+  display: block;
+  margin: 10px 0;
+  border: 3px red solid;
+}
+
 .new-tweet {
   width: 90%;
 }
