--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,8 +1,8 @@
 nav {
   height: 120px;
   width: 100%;
-  background-color: #4056A1;
-  color: #FFFFFF;
+  background-color: #e0e0e0;
+  background-image: url("https://www.transparenttextures.com/patterns/arabesque.png");
   padding-left: 1.5em;
   padding-right: 1.5em;
   display: flex;
@@ -29,4 +29,14 @@ div {
   display: flex;
   flex-direction:column;
   align-items: center;
+}
+
+@media (min-width: 1024px) {
+  
+
+  nav {
+    background-color: #4056A1;
+    color: white;
+    background-image: none;
+  }
 }
