--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,4 +1,4 @@
-
+/* Styling related to each tweet and error handling of posting the tweets */
 .tweet-button {
   background-color: #4056A1;
   color: #FFFFFF;
