--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,3 +1,4 @@
+/* Styling related to the top navigation */
 nav {
   height: 120px;
   width: 100%;
@@ -8,7 +9,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* for nav to be infrnt of header */
+  /* for nav to be infront of header */
   position: fixed;
   top: 0;
   z-index: 100;
@@ -22,7 +23,6 @@ span {
   font-size: 20px;
   display: flex;
   flex-direction: row;
-  
 }
 
 div {
@@ -31,9 +31,8 @@ div {
   align-items: center;
 }
 
+/* Responsive design for desktops */
 @media (min-width: 1024px) {
-  
-
   nav {
     background-color: #4056A1;
     color: white;
